--- a/School-management-system/src/main/resources/application.properties
+++ b/School-management-system/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.jsp
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3307/school_db
+spring.datasource.username=root
+spring.datasource.password=1234
